--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-browser-compiler-yx",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/compiler-sfc.cjs.js",
   "types": "dist/compiler-sfc.d.ts",
   "files": [
@@ -21,7 +21,7 @@
   "author": "Evan You",
   "license": "MIT",
   "peerDependencies": {
-    "vue": "3.0.11"
+    "vue": "^2.0.0||^3.0.0"
   },
   "dependencies": {
     "@babel/parser": "^7.13.9",
